--- a/web/test.html
+++ b/web/test.html
@@ -3,48 +3,105 @@
 <title>WebSocket</title>
 
 <script language="javascript" type="text/javascript">
-  var listener_id, connection, socket_id;
+  var listener_id, connection;
+  var connect_button, disconnect_button, get_listeners_button;
+  var socket_id, console_log;
+
+  function enable_connected_buttons() {
+    console.log("Connected");
+    connect_button.disabled = true;
+    disconnect_button.disabled = false;
+    get_listeners_button.disabled = false;
+    console_log.value = "";
+  }
   
+  function disable_connected_buttons() {
+    console.log("Disconnected");
+    connect_button.disabled = false;
+    disconnect_button.disabled = true;
+    get_listeners_button.disabled = true;
+  }
+
   function init() {
     listener_id = -1;
     connection = 0;
+    connect_button = document.getElementById("connect_button");
+    disconnect_button = document.getElementById("disconnect_button");
+    get_listeners_button = document.getElementById("get_listeners_button");
     socket_id = document.getElementById("socket_id");
+    console_log = document.getElementById("console_log");
+    
+    disable_connected_buttons();
   }
 
   function bind_socket() {
-    //if (connection!==0) return;
+    if (connection!==0) {
+      console.log("Another attempt was made to connect! Aborting.");
+      return;
+    }    
     connection = new WebSocket('ws://localhost:1987');
-    connection.onopen = function (event) {
+    connection.onerror = function (event) {
+      if (event.originalTarget.readyState!==1) {
+        console.log("Server not ready for connection!");
+        socket_id.style.backgroundColor = "red";
+        return;
+      }
+      //console.log("Server"+event.originalTarget.readyState);
+    }
+    connection.onopen = function () {
+      console.log("Bound to socket");
       connection.onmessage = function(event) {
-        console.log(event);
         var d = event.data;
         if (d.indexOf("SET_LISTENER_ID")>-1) {
           listener_id = parseInt(d.substr(d.indexOf(":")+1));
           socket_id.value = listener_id;
+          socket_id.style.backgroundColor = "green";
+          enable_connected_buttons();
         }
       };
     };
-    //connection.onmessage = function(event) {
-    //};
+  }
+    
+  function handle_disconnect() {
+    connection.send("REMOVE_LISTENER:"+listener_id);
+    socket_id.value = "###";
+    socket_id.style.backgroundColor = "yellow";
+    disable_connected_buttons();
+    delete connection;
+    connection = 0;
   }
   function unbind_socket() {
-    connection.send("REMOVE_LISTENER:"+listener_id);
+    handle_disconnect();
+  }
+  
+  function close() {
     connection.onclose = function (event) {
-      if (listener_id>=0) {
-        connection.send("REMOVE_LISTENER:"+listener_id);
+      handle_disconnect();
+    };
+  }
+  
+  function get_socket_listeners() {
+    connection.send("WEB_GET_LISTENERS:"+listener_id);
+    connection.onmessage = function(event) {
+      console.log(event);
+      var d = event.data;
+      if (d.indexOf("LISTENERS_LIST")>-1) {
+        console_log.value = d.substr(d.indexOf(":")+1);
       }
     };
-    socket_id.value = "###";
-    delete connection;
   }
   
   window.addEventListener("load", init, false);
+  window.addEventListener("unload", close, false);
 
 </script>
 
-<h2>CT-PPS Run control</h2>
+<h2>Run control</h2>
 
-<button onClick="javascript:bind_socket()" value="Connect" name="connect">Connect</button>
-<button onClick="javascript:unbind_socket()" value="Disconnect" name="connect">Disconnect</button>
+<button onClick="bind_socket()" id="connect_button">Connect</button>
+<button onClick="unbind_socket()" id="disconnect_button">Disconnect</button>
+<button onClick="get_socket_listeners()" id="get_listeners_button">Get listeners</button>
 <input type="text" id="socket_id" value="###"  style="background-color:yellow;" size=2 disabled />
+<br />
+<textarea id="console_log" cols=50 rows=10 disabled></textarea>
 <div id="output"></div>
