--- a/web/test.html
+++ b/web/test.html
@@ -42,14 +42,16 @@
     connection = new WebSocket('ws://localhost:1987');
     connection.onerror = function (event) {
       if (event.originalTarget.readyState!==1) {
-        console.log("Server not ready for connection!");
+        alert("Server not ready for connection!");
         socket_id.style.backgroundColor = "red";
+        connection = 0;
+        socket_id = -1;
+        disable_connected_buttons();
         return;
       }
       //console.log("Server"+event.originalTarget.readyState);
     }
     connection.onopen = function () {
-      console.log("Bound to socket");
       connection.onmessage = function(event) {
         var d = event.data;
         if (d.indexOf("SET_LISTENER_ID")>-1) {
@@ -65,7 +67,6 @@
   function handle_disconnect() {
     connection.send("REMOVE_LISTENER:"+listener_id);
     connection.onmessage = function(event) {
-      console.log(event);
       var d = event.data;
       if (d.indexOf("LISTENER_DELETED")>-1) {
         socket_id.value = "###";
@@ -73,6 +74,7 @@
         disable_connected_buttons();
         delete connection;
         connection = 0;
+        listener_id = -1;
       }
     }
   }
@@ -81,13 +83,17 @@
   }
   
   function close() {
+    alert("close() invoked");
+    handle_disconnect();
     connection.onclose = function (event) {
-      handle_disconnect();
+      console.log(event);
     };
   }
   
   function get_socket_listeners() {
     if (connection===0) return;
+    if (listener_id<0) return;
+    
     connection.send("WEB_GET_LISTENERS:"+listener_id);
     connection.onmessage = function(event) {
       var d = event.data;
@@ -98,7 +104,7 @@
   }
   
   window.addEventListener("load", init, false);
-  window.addEventListener("unload", close, false);
+  window.addEventListener("beforeunload", close, false);
   window.setInterval(get_socket_listeners, 5000);
 
 </script>
