Removed bootstrap, I said...

--- a/web/test.html
+++ b/web/test.html
@@ -3,7 +3,6 @@
 <title>CT-PPS Run control</title>
 
 <link rel="stylesheet" type="text/css" href="style.css"/>
-<link rel="stylesheet" href="bootstrap.min.css"/>
 <script language="javascript" src="socket.js"></script>
 <script language="javascript" type="text/javascript">
   
@@ -22,6 +21,6 @@
   <input type="text" id="socket_id" size=2 disabled />
   <span id="time_field"></span>
   <br />
-  <textarea id="console_log" cols=60 rows=4 disabled class="form-control"></textarea>
+  <textarea id="console_log" cols=60 rows=4 disabled></textarea>
 </div>
 <div id="output"></div>
