--- a/web/test3.html
+++ b/web/test3.html
@@ -30,9 +30,9 @@
                     <button id="acquisition_button">Launch acquisition</button>
                 </div>
                 <div class="status">
-                    <input type="text" id="connection_uri"  value="ws://echo.websocket.org/" />
+                    <input type="text" id="connection_uri"  value="wss://echo.websocket.org/" autocomplete="off" />
                     <!-- <input type="text" id="port"      value="1987" /> -->
-                    <input type="text" id="socket_id" value="asldkjas" />
+                    <input type="text" id="socket_id" value="asldkjas" autocomplete="off" />
                     <div id="bind_time"></div>
                     <!-- <div id="socket_id">####</div> -->
                     <div id="console_log">
