Fake DQM images, corrections to page scripting and style.

--- a/web/test3.html
+++ b/web/test3.html
@@ -32,7 +32,7 @@
                 <div class="status">
                     <input type="text" id="connection_uri"  value="wss://echo.websocket.org/" autocomplete="off" />
                     <!-- <input type="text" id="port"      value="1987" /> -->
-                    <input type="text" id="socket_id" value="asldkjas" autocomplete="off" />
+                    <input type="text" id="socket_id" value="###" autocomplete="off" />
                     <div id="bind_time"></div>
                     <!-- <div id="socket_id">####</div> -->
                     <div id="console_log">
@@ -71,10 +71,11 @@
                 <img src="intergalactic-light.png" alt="intergalactic-light">
                 -->
                 
-                <div class="output" id="output1">
-                    <img src="dialup-final.png" alt="dialup-final">
+                <div class="output">
+                    <img id="output1" src="dialup-final.png" alt="DQM report">
                 </div>
-                <div class="output" id="output2">
+<!--
+                 <div class="output" id="output2">
                     <img src="dencity-for-web.jpg" alt="dencity-for-web">
                 </div>
                 <div class="output" id="output3">
@@ -83,6 +84,7 @@
                 <div class="output" id="output4">
                     <img src="intergalactic-light.png" alt="intergalactic-light">
                 </div> 
+ -->
             </div>
             <div class="help">Some help on run control and monitoring.
                 <div class="help_text">
