--- a/web/control-page.html
+++ b/web/control-page.html
@@ -6,23 +6,14 @@
 
         <title>CT-PPS Run control</title>
 
-        <!-- <link rel="stylesheet" type="text/css" href="style.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="style3.css"/> -->
         <link rel="stylesheet" type="text/css" href="control-appearance.css"/>
 
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
         <script src="jquery-1.11.3.min.js"></script>
-        <!-- <script src="jQuery-Plugin-For-Panning-Zooming-SVG-Images/compiled/jquery.svg.pan.zoom.js"></script> -->
         <script src="jQuery-Plugin-For-Panning-Zooming-Any-Elements-panzoom/dist/jquery.panzoom.min.js"></script>
 
         <script language="javascript" src="control-behavior.js"></script>
-        <!-- <script language="javascript" src="socket3.js"></script> -->
 
-        <!-- <script language="javascript" type="text/javascript"> -->
-            <!-- // window.addEventListener("load", socket_init, false); -->
-            <!-- // window.addEventListener("beforeunload", socket_close, false); -->
-            <!-- // window.setInterval(socket_refresh, 1000); -->
-        <!-- </script> -->
     </head>
     <body>
         <div id="time_field"></div>
@@ -39,14 +30,9 @@
                 </div>
                 <div class="status">
                     <input type="text" id="connection_uri"  value="wss://echo.websocket.org/" autocomplete="off" />
-                    <!-- <input type="text" id="port"      value="1987" /> -->
                     <input type="text" id="socket_id" value="###" autocomplete="off" />
                     <div id="bind_time"></div>
-                    <!-- <div id="socket_id">####</div> -->
                     <div id="console_log">
-                        <!-- aksjdlkjsahf
-                        asdf;jkasd
-                        a;sdfj-->
                     </div>
                 </div>
             </div>
@@ -64,21 +50,10 @@
             </div>
         </div>
 
-<!-- 
-        <div id="upper_fields">
-        </div>
- -->
 
         <div id="output">
             <div class="interface">
             
-                <!--
-                <img src="dialup-final.png" alt="dialup-final">
-                <img src="dencity-for-web.jpg" alt="dencity-for-web">
-                <img src="PopSci-journal-history-diagram.png" alt="PopSci-journal-history-diagram">
-                <img src="intergalactic-light.png" alt="intergalactic-light">
-                -->
-
                 <div class="controls" id="zooming">
                     <button id="zoom-in"  class="enabled">Zoom In</button>
                     <button id="zoom-out" class="enabled">Zoom Out</button>
@@ -90,22 +65,11 @@
                     <!-- <embed id="output1" src="BEatmega32u4.pdf" type='application/pdf'> -->
                 </div>
 
-<!--
-                 <div class="output" id="output2">
-                    <img src="dencity-for-web.jpg" alt="dencity-for-web">
-                </div>
-                <div class="output" id="output3">
-                    <img src="PopSci-journal-history-diagram.png" alt="PopSci-journal-history-diagram">
-                </div>
-                <div class="output" id="output4">
-                    <img src="intergalactic-light.png" alt="intergalactic-light">
-                </div> 
- -->
             </div>
             <div class="help">Some help on run control and monitoring.
                 <div class="help_text">
                     <p>Texts.</p>
-                    <p class="help_text">Legend:
+                    <p>Legend:
                         <div class="legend block_master"></div> = Master
                         <div class="legend block_websocket"></div> = Web connexion
                         <div class="legend block_regularsocket"></div> = Terminal
