Aesthetics improvements in v1 GUI

--- a/web/v1/index.html
+++ b/web/v1/index.html
@@ -26,8 +26,10 @@
   <textarea id="console_log" cols=50 rows=5 disabled></textarea>
   <div id="output"></div>
 </div>
+<div id="exception_block"></div>
 <div id="dqm_block"></div>
 
+<br />
 Legend:
 <div class="legend block_master"></div> = Master
 <div class="legend block_websocket"></div> = Web connexion
