--- a/web/control-page.html
+++ b/web/control-page.html
@@ -29,8 +29,8 @@
                     <button id="acquisition_button">Launch acquisition</button>
                 </div>
                 <div class="status">
-                    <input type="text" id="connection_uri"  value="wss://echo.websocket.org/" autocomplete="off" />
-                    <input type="text" id="socket_id" value="###" autocomplete="off" />
+                    <input type="text" id="connection_uri"  value="ws://localhost:1987" autocomplete="off" />
+                    <input type="text" id="socket_id" value="###" autocomplete="off" disabled="disabled" />
                     <div id="bind_time"></div>
                     <div id="console_log">
                     </div>
