Added separate button for Stop Acquisition, improved testing server.

--- a/web/control-page.html
+++ b/web/control-page.html
@@ -26,7 +26,8 @@
                     <button id="bind_button">Bind</button>
                     <button id="unbind_button">Unbind</button>
                     <button id="refresh_button">Refresh</button>
-                    <button id="acquisition_button">Launch acquisition</button>
+                    <button id="start_acquisition_button">Launch acquisition</button>
+                    <button id="stop_acquisition_button">Stop acquisition</button>
                 </div>
                 <div class="status">
                     <input type="text" id="connection_uri"  value="ws://localhost:1987" autocomplete="off" />
