Added the Run Id vistar

--- a/web/v1/index.html
+++ b/web/v1/index.html
@@ -22,6 +22,7 @@
     <input type="text" id="socket_id" size=2 disabled />
     <button onClick="socket_refresh()" id="refresh_button">Refresh</button><br />
     <button onClick="start_acquisition()" id="acquisition_button">Launch acquisition</button>
+    Run Id: <input type="text" id="run_id", size=2 disabled />
   </div>
   <textarea id="console_log" cols=40 rows=4 disabled></textarea>
   <div id="output"></div>
